log

Mon 14 Aug 2023 03:46:35 PM UTC: 
 exercises.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
5531fb5
Mon 14 Aug 2023 03:53:30 PM UTC: 
 tests:  0|6
total_score: 10/70
26854ae
Mon 14 Aug 2023 03:59:22 PM UTC: 
 exercises.c | 22 ++++++++++------------
 1 file changed, 10 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 20/70
c33ba86
Mon 14 Aug 2023 04:00:47 PM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
39411f9
Mon 14 Aug 2023 04:03:04 PM UTC: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  0|4
total_score: 30/70
7ee2c47
Tue 15 Aug 2023 11:58:57 PM UTC: 
 exercises.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:13: error: ‘mergedArr’ undeclared (first use in this function)
   81 |             mergedArr[indexMerged] = arr1[index1];
      |             ^~~~~~~~~
exercises.c:81:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
66deff0
Tue 15 Aug 2023 11:59:26 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|3
total_score: 40/70
67cf5ba
Wed 16 Aug 2023 12:08:02 AM UTC: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
188df75
Wed 16 Aug 2023 03:34:29 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
8c283fc
Wed 16 Aug 2023 08:49:39 PM UTC: 
 exercises.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  0|2
total_score: 50/70
275c684
Wed 16 Aug 2023 08:51:37 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/string.h:535,
                 from exercises.c:5,
                 from test.c:1:
In function ‘strncpy’,
    inlined from ‘inicializarLibro’ at exercises.c:152:5:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:95:10: error: ‘__builtin_strncpy’ specified bound 100 equals destination size [-Werror=stringop-truncation]
   95 |   return __builtin___strncpy_chk (__dest, __src, __len,
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   96 |                                   __glibc_objsize (__dest));
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~
In function ‘strncpy’,
    inlined from ‘inicializarLibro’ at exercises.c:153:5:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:95:10: error: ‘__builtin_strncpy’ specified bound 50 equals destination size [-Werror=stringop-truncation]
   95 |   return __builtin___strncpy_chk (__dest, __src, __len,
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   96 |                                   __glibc_objsize (__dest));
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7146bd3
Wed 16 Aug 2023 08:53:47 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:152:18: error: expected expression before ‘)’ token
  152 |   libro = (libro*) malloc (sizeof(Libro))
      |                  ^
Compilation failed
8522ae1
Wed 16 Aug 2023 08:53:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:152:18: error: expected expression before ‘)’ token
  152 |   libro = (libro*) malloc (sizeof(Libro));
      |                  ^
Compilation failed
4ecc22d
Wed 16 Aug 2023 08:54:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
b535113
Wed 16 Aug 2023 09:00:05 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
3c403ae
Wed 16 Aug 2023 09:13:25 PM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++++--
 1 file changed, 27 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:181:48: error: expected ‘)’ before ‘;’ token
  181 |     Nodo nuevoNodo = (Nodo*)malloc(sizeof(Nodo);
      |                                   ~            ^
      |                                                )
exercises.c:181:22: error: invalid initializer
  181 |     Nodo nuevoNodo = (Nodo*)malloc(sizeof(Nodo);
      |                      ^
exercises.c:196:3: error: expected ‘,’ or ‘;’ before ‘}’ token
  196 |   }
      |   ^
exercises.c:181:10: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
  181 |     Nodo nuevoNodo = (Nodo*)malloc(sizeof(Nodo);
      |          ^~~~~~~~~
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:177:9: error: unused variable ‘segundoNodo’ [-Werror=unused-variable]
  177 |   Nodo *segundoNodo = NULL;
      |         ^~~~~~~~~~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b856741
Wed 16 Aug 2023 09:28:24 PM UTC: 
 exercises.c | 31 ++++++++++++++++---------------
 1 file changed, 16 insertions(+), 15 deletions(-)
 tests:  0|1
total_score: 60/70
ff162ad
